# Pascal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Server Plan.yml  pascal.code-workspace  premake5.lua
PascalServer/: premake5.lua
PascalServer/bin-int/Debug-windows-x86_64/PascalServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
PascalServer/src/: pspch.cpp  pspch.h
PascalServer/src/Core/: Application.cpp  Application.h  Assert.h  Base.h  Buffer.cpp  Buffer.h  EventDescription.cpp  EventDescription.h  EventLoop.cpp  EventLoop.h  Log.cpp  Log.h  Poller.cpp  Poller.h  Test.cpp  Test.h  Test2.h  Test3.cpp
PascalServer/src/Network/: INetAddress.cpp  INetAddress.h  Socket.cpp  Socket.h
PascalServer/src/Platform/Pollers/: EPollPoller.cpp  EPollPoller.h
PascalServer/src/Server/: BasicRouter.cpp  BasicRouter.h  Connection.cpp  Connection.h  HttpController.h  HttpParameterBinder.h  HttpRequest.cpp  HttpRequest.h  HttpRequestParser.cpp  HttpRequestParser.h  HttpResponse.h  HttpResponseBuilder.cpp  HttpResponseBuilder.h  HttpServer.cpp  HttpServer.h  HttpTypes.cpp  HttpTypes.h  HttpUtils.cpp  HttpUtils.h  Router.cpp  Router.h  StaticFileRouter.cpp  StaticFileRouter.h
PascalServer/src/Utils/: FunctionTraits.h  Utils.cpp  Utils.h
Sandbox/: premake5.lua  test2.html
Sandbox/Assets/: app.js  error.html  index.html  localhost+3-key.pem  localhost+3.pem
Sandbox/Assets/sub/: test.html
Sandbox/Assets/temp/: localhost.crt  localhost.csr  localhost.decrypted.key  localhost.key
Sandbox/bin-int/Debug-windows-x86_64/: Sandbox.exe.recipe  vc143.idb
Sandbox/bin-int/Debug-windows-x86_64/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sandbox/src/: main.cpp
Sandbox/src/Tests/: HttpRequestParserTest.cpp  HttpRequestParserTest.h  HttpResponseBuilderTest.cpp  HttpResponseBuilderTest.h  INetAddressTest.h  TestController.cpp  TestController.h  TestUtils.cpp  TestUtils.h
scripts/: GenProject.bat  Setup.bat  Setup.py  SetupPremake.py  Utils.py
